--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "deno.codeLens.referencesAllFunctions": true,
   "deno.suggest.imports.hosts": {
     "https://deno.land": true
-  }
+  },
+  "deno.lint": false,
 }
